# Illustrations-Haskell

./: Illustrations-Haskell.cabal  LICENSE  README.md  essai.html  package.yaml  stack.yaml
app/: Main.hs
src/Data/: Liste.hs  Peutetre.hs  Soit.hs
src/Example/: Dadagem.hs  Download.hs  Finance.hs  STMEssai.hs  TreeTraverse.hs  TwoMonadTransformerForSameMonad.hs
test/: exemple-testMLabs.hs
