cabal-version: 1.12

-- Version
-- 2022-06-08T15:12-0400

name:           Illustrations-Haskell
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/L-Solutions/Illustrations-Haskell#readme>
homepage:       https://github.com/L-Solutions/Illustrations-Haskell#readme
bug-reports:    https://github.com/L-Solutions/Illustrations-Haskell/issues
author:         Benoît Fraikin
maintainer:     benoit.fraikin@usherbrooke.ca
copyright:      BSD3
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/L-Solutions/Illustrations-Haskell

library
  exposed-modules:
      Data.Liste
      Data.Peutetre
      Data.Soit
      Example.Download
      Example.TreeTraverse
      Example.TwoMonadTransformerForSameMonad
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , conduit
    , containers
    , http-conduit
    , mtl
    , resourcet
    , transformers
  default-language: Haskell2010

executable Illustrations-Haskell-exe
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      Illustrations-Haskell
    , base >=4.7 && <5
    , text
    , textdecoration
  default-language: Haskell2010

test-suite Illustrations-Haskell-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      Illustrations-Haskell
    , base >=4.7 && <5
    , tasty >=1.4
    , tasty-hunit
    , tasty-quickcheck
    , tasty-smallcheck
  default-language: Haskell2010
